--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -293,7 +293,7 @@
   flex-direction: column;
   justify-content: space-between;
   transition: all 0.5s ease;
-  padding: 50px;
+  padding: 50px 50px 70px 50px;
 }
 
 @media (max-width: 768px) {
