--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -175,6 +175,12 @@
     background-repeat: repeat-y;
     background-position: top center;
   }
+  button:not(:disabled) {
+    cursor: pointer;
+  }
+  button:disabled {
+    cursor: not-allowed;
+  }
 }
 
 /* 배경 이미지 클래스 기반 설정 */
@@ -333,6 +339,7 @@
 @media (max-width: 768px) {
   .glass-card {
     border-radius: 40px;
+    min-height: 95vh;
   }
 }
 
