--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -174,6 +174,7 @@
     background-size: max(100vw, 1920px) auto;
     background-repeat: repeat-y;
     background-position: top center;
+    min-width: 320px;
   }
   button:not(:disabled) {
     cursor: pointer;
